java/java.hints/test/unit/data/goldenfiles/org/netbeans/modules/java/hints/errors/ErrorHintsTest/testAddThrowsClauseHint3-hints.pass
Add throws clause for java.io.IOException
Surround Statement with try-catch
